sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:9: error: value toTuple is not a member of (Boolean, Int)
    (plusPetit(positionGnome,positionGnome+1),positionGnome).toTuple match {
                                                             ^AlgGnomeSort:11: error: not found: value -
      case (true,taille-1) => return
                       ^